# LexiClass-API

./: .gitignore  .pylintrc  ARCHITECHTURE.md  README.md  alembic.ini  docker-compose.prod.yml  docker-compose.yml  example.env  pyproject.toml
alembic/: env.py
alembic/versions/: 6e26059a41c5_update_index_status_values_to_uppercase.py  70fe164ab32a_rename_document_status_to_index_status.py  717851e19411_initial_migration.py  a05529dbd2e0_create_project_and_document_tables.py  b2623b09b89a_migrate_to_bigserial_and_restructure_.py  df372993474c_add_field_based_classification_schema.py
docker/api/: Dockerfile
docker/nginx/: nginx.conf
src/lexiclass_api/: main.py  worker.py
src/lexiclass_api/api/v1/: documents.py  fields.py  indexing.py  prediction.py  projects.py  router.py  tasks.py  training.py
src/lexiclass_api/core/: celery.py  config.py  deps.py  openapi.py  storage.py  worker.py
src/lexiclass_api/db/: session.py
src/lexiclass_api/models/: __init__.py  base.py  document.py  document_label.py  field.py  field_class.py  model.py  prediction.py  project.py  task.py
src/lexiclass_api/schemas/: __init__.py  document.py  document_label.py  field.py  field_class.py  model.py  prediction.py  project.py  task.py
src/lexiclass_api/services/: document_labels.py  documents.py  field_classes.py  fields.py  models.py  predictions.py  projects.py
src/lexiclass_api/tasks/: __init__.py  indexing.py  prediction.py  training.py
tests/: DOCKER_SETUP.md  QUICKSTART.md  README.md  __init__.py  conftest.py  create_test_tables.py  test_helpers.py  test_integration_full_workflow.py
