[tool.poetry]
name = "lexiclass-api"
version = "0.1.0"
description = "API service for LexiClass document classification"
authors = ["Arafat Hasan <opendoor.arafat@gmail.com>"]
readme = "README.md"
packages = [{include = "lexiclass_api", from = "src"}]

[tool.poetry.dependencies]
python = ">=3.9"
fastapi = ">=0.109.0"
uvicorn = {extras = ["standard"], version = ">=0.27.0"}
gunicorn = ">=21.2.0"
greenlet = ">=3.0.0"
pydantic = ">=2.0.0"
pydantic-settings = ">=2.1.0"
sqlalchemy = ">=2.0.0"
alembic = ">=1.13.0"
asyncpg = ">=0.29.0"
celery = ">=5.3.0"
redis = ">=5.0.0"
python-jose = {extras = ["cryptography"], version = ">=3.3.0"}
passlib = {extras = ["bcrypt"], version = ">=1.7.4"}
python-multipart = ">=0.0.9"
prometheus-client = ">=0.19.0"
structlog = ">=24.1.0"
python-json-logger = ">=2.0.0"
lexiclass-core = {path = "../LexiClass-Core", develop = true}

[tool.poetry.group.dev.dependencies]
pytest = ">=7.0.0"
pytest-asyncio = ">=0.23.0"
pytest-cov = ">=4.1.0"
pytest-timeout = ">=2.2.0"
httpx = ">=0.26.0"
faker = ">=20.0.0"
black = ">=23.0.0"
isort = ">=5.0.0"
mypy = ">=1.0.0"
pylint = ">=3.0.0"
pre-commit = ">=3.5.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.black]
line-length = 88
target-version = ["py39"]
include = '\.pyi?$'

[tool.isort]
profile = "black"
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 88

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
check_untyped_defs = true

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q --cov=lexiclass_api"
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.coverage.run]
source = ["src"]
omit = ["tests/*", "**/__init__.py"]

[tool.pylint.messages_control]
disable = ["C0111", "C0103", "R0903", "C0301"]

[tool.pylint.format]
max-line-length = 88
